--- a/components/Stock/stock-selector.scss
+++ b/components/Stock/stock-selector.scss
@@ -1,35 +1,64 @@
 .stock-selector {
-    margin-bottom: 20px;
-  
-    label {
-      font-weight: bold;
-      margin-right: 10px;
-    }
-  
-    select {
-      margin-right: 10px;
-      padding: 8px;
-      border-radius: 4px;
-    }
-  
-    input[type="number"] {
-      width: 60px;
-      padding: 8px;
-      margin-right: 10px;
-      border-radius: 4px;
-    }
-  
-    button {
-      padding: 8px 12px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-  
-    button:hover {
-      background-color: #218838;
-    }
-  }
-  
+  margin-bottom: 20px;
+}
+
+label {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+select {
+  margin-right: 10px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #555;
+  background-color: #ffffff;
+  color: #2d2d2d;
+}
+
+input[type="number"] {
+  width: 60px;
+  padding: 8px;
+  margin-right: 10px;
+  border-radius: 4px;
+  border: 1px solid #555;
+  background-color: #ffffff;
+  color: #2d2d2d;
+}
+
+button {
+  padding: 8px 12px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #218838;
+}
+
+.selected-items ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+.selected-items li {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+button[type="button"] {
+  background-color: #e74c3c;
+  color: white;
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type="button"]:hover {
+  background-color: #c0392b;
+}
