--- a/components/Stock/stock-form.scss
+++ b/components/Stock/stock-form.scss
@@ -1,6 +1,6 @@
 form {
   background-color: #fbfbfb;
-  border: 1px solid #444;
+   
   padding: 16px;
   border-radius: 4px;
   max-width: 600px;
@@ -8,7 +8,7 @@ form {
 }
 
 form div {
-  margin-bottom: 16px;
+   ;
 }
 
 label {
@@ -21,7 +21,7 @@ label {
 input[type="text"], input[type="number"] {
   width: 100%;
   padding: 12px;
-  border: 1px solid #555;
+   
   border-radius: 4px;
   font-size: 16px;
   background-color: #ffffff;
