--- a/components/Background/background.scss
+++ b/components/Background/background.scss
@@ -5,47 +5,56 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1; /* Ajuste o z-index para garantir que fique atrás */
-  background-color: #004d40; /* Fundo em tom de verde escuro para representar estabilidade e inovação */
+  z-index: -1;
+  background-color: #0F1E42; /* Fundo escuro, representando a noite urbana */
+}
+
+.cityscape {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  background: url('./cityscape.svg') repeat-x; /* Imagem de silhueta urbana */
+  background-size: auto;
 }
 
 .circle {
   position: absolute;
   border-radius: 50%;
-  background: rgba(0, 150, 136, 0.8);
-  box-shadow: 0 0 20px rgba(0, 150, 136, 0.5);
+  background: rgba(240, 231, 65, 0.8);
+  box-shadow: 0 0 20px rgba(255, 118, 79, 0.5);
   animation: float 10s infinite ease-in-out;
 }
 
 .small {
-  width: 100px;
-  height: 100px;
-  top: 20%;
-  left: 15%;
+  width: 60px;
+  height: 60px;
+  top: 15%;
+  left: 10%;
   animation-duration: 8s;
 }
 
 .medium {
-  width: 150px;
-  height: 150px;
-  top: 50%;
-  left: 70%;
+  width: 100px;
+  height: 100px;
+  top: 40%;
+  left: 60%;
   animation-duration: 12s;
 }
 
 .large {
-  width: 200px;
-  height: 200px;
-  top: 75%;
-  left: 25%;
+  width: 150px;
+  height: 150px;
+  top: 70%;
+  left: 30%;
   animation-duration: 14s;
 }
 
 .xlarge {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   top: 10%;
-  left: 80%;
+  left: 85%;
   animation-duration: 18s;
 }
 
@@ -54,7 +63,7 @@
     transform: translateY(0) translateX(0);
   }
   50% {
-    transform: translateY(-30px) translateX(15px);
+    transform: translateY(-20px) translateX(10px);
   }
   100% {
     transform: translateY(0) translateX(0);
