--- a/components/Request/request-list.scss
+++ b/components/Request/request-list.scss
@@ -2,13 +2,13 @@ table {
     width: 100%;
     border-collapse: collapse;
     background-color: #fbfbfb;
-    border: 1px solid #444;
+     
     border-radius: 4px;
   }
   
   thead {
-    background-color: #2980b9;
-    color: white;
+    background-color: #2980b9 !important;
+    color: white !important;
   }
   
   th, td {
@@ -57,7 +57,7 @@ table {
   .page-item {
     list-style: none;
     padding: 8px 16px;
-    border: 1px solid #555;
+     
     margin: 0 5px;
     cursor: pointer;
     color: #fbfbfb;
