--- a/pages/request-management.scss
+++ b/pages/request-management.scss
@@ -33,7 +33,7 @@
 /* Styling for the Request Form */
 form {
     background-color: #fbfbfb;  
-    border: 1px solid #444;  
+       
     padding: 16px;
     border-radius: 4px;
     max-width: 600px;
@@ -41,7 +41,7 @@ form {
 }
 
 form div {
-    margin-bottom: 16px;
+     ;
 }
 
 label {
@@ -54,7 +54,7 @@ label {
 input[type="text"], input[type="number"], textarea, select {
     width: 100%;
     padding: 12px;
-    border: 1px solid #555;  
+       
     border-radius: 4px;
     font-size: 16px;
     background-color: #ffffff;  
@@ -103,7 +103,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     background-color: #fbfbfb;  
-    border: 1px solid #444;  
+       
     border-radius: 4px;  
 }
 
@@ -158,7 +158,7 @@ button:last-child:hover {
 .page-item {
     list-style: none;
     padding: 8px 16px;
-    border: 1px solid #555;
+     
     margin: 0 5px;
     cursor: pointer;
     color: #fbfbfb;  
