--- a/components/DemandManagement/demand-form.module.scss
+++ b/components/DemandManagement/demand-form.module.scss
@@ -1,4 +1,4 @@
-.modal-overlay {
+.modalOverlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -11,7 +11,7 @@
   justify-content: center;
 }
 
-.modal-content {
+.modalContent {
   position: relative;
   width: 90%;
   background: #fff;
@@ -20,14 +20,14 @@
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
-.modal-content form {
+.modalContent form {
   overflow-y: auto;
   min-width: 100%;
   height: 100%;
   margin-bottom: 0;
 }
 
-.modal-content button[type="submit"],
-.modal-content button[type="button"] {
+.modalContent button[type="submit"],
+.modalContent button[type="button"] {
   transition: background-color 0.3s ease;
 }
