--- a/components/Stock/stock-list.module.scss
+++ b/components/Stock/stock-list.module.scss
@@ -1,28 +1,27 @@
-table {
+.table {
   width: 100%;
   border-collapse: collapse;
   background-color: #fbfbfb;
-   
   border-radius: 4px;
 }
 
-thead {
+.thead {
   background-color: #2980b9;
   color: white;
 }
 
-th, td {
+.th, .td {
   padding: 12px;
   text-align: left;
   border-bottom: 1px solid #555;
   color: #2d2d2d;
 }
 
-tbody tr:hover {
+.tbodyRow:hover {
   background-color: #f4f4f4;
 }
 
-button {
+.button {
   padding: 8px 12px;
   border: none;
   border-radius: 4px;
@@ -32,19 +31,19 @@ button {
   color: white;
 }
 
-button:first-child {
+.buttonFirstChild {
   background-color: #27ae60;
 }
 
-button:first-child:hover {
+.buttonFirstChild:hover {
   background-color: #229954;
 }
 
-button:last-child {
+.buttonLastChild {
   background-color: #e74c3c;
 }
 
-button:last-child:hover {
+.buttonLastChild:hover {
   background-color: #c0392b;
 }
 
@@ -54,16 +53,15 @@ button:last-child:hover {
   margin-top: 20px;
 }
 
-.page-item {
+.pageItem {
   list-style: none;
   padding: 8px 16px;
-   
   margin: 0 5px;
   cursor: pointer;
   color: #fbfbfb;
 }
 
-.page-item.active {
+.pageItemActive {
   background-color: #2980b9;
   color: white;
 }
