--- a/components/Stock/stock-selector.module.scss
+++ b/components/Stock/stock-selector.module.scss
@@ -1,32 +1,30 @@
-.stock-selector {
+.stockSelector {
   margin-bottom: 20px;
 }
 
-label {
+.stockSelector__label {
   font-weight: bold;
   margin-right: 10px;
 }
 
-select {
+.stockSelector__select {
   margin-right: 10px;
   padding: 8px;
   border-radius: 4px;
-   
   background-color: #ffffff;
   color: #2d2d2d;
 }
 
-input[type="number"] {
+.stockSelector__input {
   width: 60px;
   padding: 8px;
   margin-right: 10px;
   border-radius: 4px;
-   
   background-color: #ffffff;
   color: #2d2d2d;
 }
 
-button {
+.stockSelector__button {
   padding: 8px 12px;
   background-color: #28a745;
   color: white;
@@ -35,22 +33,22 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.stockSelector__button:hover {
   background-color: #218838;
 }
 
-.selected-items ul {
+.stockSelector__selectedItems ul {
   list-style-type: disc;
   padding-left: 20px;
 }
 
-.selected-items li {
+.stockSelector__selectedItems li {
   margin-bottom: 10px;
   display: flex;
   align-items: center;
 }
 
-button[type="button"] {
+.stockSelector__removeButton {
   background-color: #e74c3c;
   color: white;
   padding: 8px;
@@ -59,6 +57,6 @@ button[type="button"] {
   cursor: pointer;
 }
 
-button[type="button"]:hover {
+.stockSelector__removeButton:hover {
   background-color: #c0392b;
 }
